--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "../tsconfig.json",
     "compilerOptions": {
+      "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+      },
       "target": "es5",
       "lib": ["es5", "dom"],
       "types": ["cypress", "node"]
