--- a/package.json
+++ b/package.json
@@ -17,6 +17,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/pretty": "^2.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "happy-dom": "^14.12.3",
+    "pretty": "^2.0.0",
     "concurrently": "^8.2.0",
     "cypress": "^13.13.0",
     "react": "^18.3.1",
