another lint script adjustment

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npx cypress run --browser electron",
     "test-component": "npx cypress run --component",
     "test-gui": "npx cypress open",
-      "lint": "eslint server/src client/src --ext js,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint \"server/src/**/*.{js,tsx}\" \"client/src/**/*.{js,tsx}\" --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
         "eslint": "eslint src"
   },
