--- a/package.json
+++ b/package.json
@@ -12,29 +12,33 @@
     "test": "npx cypress run --browser electron",
     "test-component": "npx cypress run --component",
     "test-gui": "npx cypress open",
-    "lint": "eslint \"server/src/**/*.{js,tsx}\" \"client/src/**/*.{js,tsx}\" --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint client/** server/**",
     "preview": "vite preview",
-        "eslint": "eslint src"
+    "eslint": "eslint src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.26.0",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
     "@types/pretty": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "happy-dom": "^14.12.3",
-    "pretty": "^2.0.0",
     "concurrently": "^8.2.0",
     "cypress": "^13.13.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "globals": "^16.0.0",
+    "happy-dom": "^14.12.3",
+    "pretty": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^8.32.0"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.1",
