--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "../tsconfig.json",
     "compilerOptions": {
-      "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"]
-      },
+      "jsx": "react",
       "target": "es5",
       "lib": ["es5", "dom"],
       "types": ["cypress", "node"]
