--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "vitest": "^2.0.3"
+    "vitest": "^2.0.3",
+    "wait-on": "^8.0.3"
   }
 }
