--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,15 +34,13 @@ jobs:
         run: npm run build
 
       # Start server
-      - name: Start server
+      - name: Start server and wait
         run: |
-            npm run start &
-        env: 
+            npx concurrently -k -s first -n "SERVER,WAIT" \
+            "npm run develop" \
+            "npx wait-on http://localhost:3001 --timeout 30000"
+        env:
             PORT: 3001
-    
-      # Wait for server
-      - name: Wait for server to be ready
-        run: npx wait-on http://localhost:3001
     
       # Run tests
       - name: Run Tests
