--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,6 @@ jobs:
         env:
             PORT: 3001
     
-      # Run tests
-      - name: Run Tests
-        run: npm run test-component && npm run test
+      # Run component tests
+      - name: Run Component Tests
+        run: npm run test-component
